--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 CEBAF/.DS_Store
 .DS_Store
 CEBAF/.DS_Store
+Magnet_Studies/Geometry/Complete_Assemblies/4x Magnet Holder Assemby.STL
+Magnet_Studies/Geometry/Complete_Assemblies/Single Magnet Assemby.STL
